Break the comments and reactions on 2 lines on mobile to avoid trucating reactions.

--- a/scss/partials/_stream_view_item.scss
+++ b/scss/partials/_stream_view_item.scss
@@ -281,6 +281,11 @@ div.stream-view-item {
         @include mobile() {
           position: relative;
           bottom: unset;
+
+          div.stream-mobile-comments-summary {
+            float: unset;
+            margin-bottom: 16px;
+          }
         }
       }
     }
